# tinyRPC

./: CMakeLists.txt  LICENSE  README.md  config.yaml
api/: http_rule.proto
benchmark/: CMakeLists.txt  bench.cc  bench.h  connection.h
benchmark/tool/: bench.h  countdown_latch.h  method_traits.h
example/calculate/: CMakeLists.txt  calculate_client.cc  calculate_server.cc  calculate_service.pb.cc  calculate_service.pb.h  calculate_service.proto  client.cc  server.cc
example/http/: CMakeLists.txt  client.cc  http_api_gw.h  http_rule.pb.h  server.cc  services.pb.cc  services.pb.h  services.proto  test_service.gw.h  test_service.pb.cc  test_service.pb.h  test_service.proto
include/: session.h
include/client/: channel.h  client.h
include/codec/: abstract_codec.h  http_codec.h  protobuf_codec.h
include/comm/: crc32.h  endian.h  string_util.h  uuid.h
include/protocol/: codec.h  error.h  message.h
include/router/: base_router.h  http_router.h  protobuf_router.h  router.h
include/rpc/: abstract_codec.h  abstract_router.h  closure.h  codec.h  controller.h  dispatcher.h  error.h  message.h  router.h
include/server/: gw.h  server.h  session.h
include/tinyRPC/client/: channel.h  client.h  lb.h
include/tinyRPC/codec/: abstract_codec.h  http_codec.h  protobuf_codec.h
include/tinyRPC/comm/: endian.h  string_util.h
include/tinyRPC/exec/: executor.h  task_queue.h
include/tinyRPC/registry/: etcd.h  etcd_def.h  registry.h
include/tinyRPC/router/: base_router.h  http_router.h  protobuf_router.h
include/tinyRPC/rpc/: closure.h  controller.h  error.h  message.h
include/tinyRPC/server/: gw.h  server.h
include/tinyRPC/server_v2/: gw.h  server.h  session.h
plugin/: CMakeLists.txt  http_gw_generator.cc
plugin/proto/: http_rule.proto
src/: server.cc  session.cc
src/client/: channel.cc  client.cc  lb.cc
src/codec/: abstract_codec.cc  http_codec.cc  protobuf_codec.cc
src/exec/: executor.cc  task_queue.cc
src/protocol/: codec.cc  controller.cc
src/registry/: etcd.cc  etcd_def.cc  registry.cc
src/router/: base_router.cc  http_router.cc  protobuf_router.cc  router.cc
src/rpc/: abstract_codec.cc  abstract_router.cc  codec.cc  controller.cc  dispatcher.cc  error.cc  message.cc  router.cc
src/server/: gw.cc  server.cc  session.cc
src/server_v2/: gw.cc  server.cc  session.cc
test/: CMakeLists.txt  http_api_gw.h  test_accept.cc  test_codec.cc  test_connect.cc  test_consistant_hash.cc  test_crc.cc  test_etcd.cc  test_etcd_put.cc  test_etcd_watch.cc  test_getifaddr.cc  test_http_gw.cc  test_json_message.cc  test_plugin.cc  test_threadpool.cc
